# smithy-hs

./: .editorconfig  .gitignore  README.md  build.gradle.kts  cabal.project  detekt.yml  flake.nix  gradle.properties  haskell-client-codegen  settings.gradle.kts  test-client-sdk
.github/: CODEOWNERS
.github/workflows/: gradle-check.yml  gradle-detekt-lint.yaml  nix-ci.yaml  release.yaml
client-codegen/: build.gradle.kts
client-codegen-test/: .gitignore  README.md  build.gradle.kts  default.nix  haskell-client-codegen  smithy-build.json
client-codegen-test/hs-it/: LICENSE  cabal.project.local  hs-it.cabal
client-codegen-test/hs-it/test/: HttpDocumentDeserializationTest.hs  HttpDocumentTest.hs  HttpHeaderTest.hs  HttpLabelTest.hs  HttpPayloadDeserializationTest.hs  HttpPayloadTest.hs  HttpQueryTest.hs  Main.hs  Message.hs  ReservedWordsTest.hs
client-codegen-test/model/: main.smithy
client-codegen-test/output/source/haskell-client-codegen/: project.cabal  test-client-sdk.cabal
client-codegen-test/output/source/haskell-client-codegen/Com/Example/: ExampleServiceClient.hs  Query.hs  Utility.hs
client-codegen-test/output/source/haskell-client-codegen/Com/Example/Command/: GetMenu.hs  PostMenu.hs  TestCustomStatus.hs  TestErrors.hs  TestHttpDocument.hs  TestHttpDocumentDeserialization.hs  TestHttpHeaders.hs  TestHttpLabels.hs  TestHttpPayload.hs  TestHttpPayloadDeserialization.hs  TestMaybe.hs  TestQuery.hs  TestReservedWords.hs
client-codegen-test/output/source/haskell-client-codegen/Com/Example/Model/: CoffeeCustomization.hs  CoffeeItem.hs  CoffeeType.hs  Error400.hs  GetMenuInput.hs  GetMenuOutput.hs  InternalServerError.hs  MilkType.hs  PostMenuInput.hs  PostMenuOutput.hs  SomeUnion.hs  TemperaturePreference.hs  TestCustomStatusInput.hs  TestCustomStatusOutput.hs  TestErrorsOutput.hs  TestHttpDocumentDeserializationInput.hs  TestHttpDocumentDeserializationOutput.hs  TestHttpDocumentInput.hs  TestHttpDocumentOutput.hs  TestHttpHeadersInput.hs  TestHttpHeadersOutput.hs  TestHttpLabelsInput.hs  TestHttpLabelsOutput.hs  TestHttpPayloadDeserializationInput.hs  TestHttpPayloadDeserializationOutput.hs  TestHttpPayloadInput.hs  TestHttpPayloadOutput.hs  TestMaybeInput.hs  TestMaybeOutput.hs  TestQueryInput.hs  TestQueryOutput.hs  TestReservedWordsInput.hs  TestReservedWordsOutput.hs
client-codegen-test/output/source/test-client-sdk/Com/Example/: Utility.hs
client-codegen-test/output/source/test-client-sdk/Com/Example/Command/: TestErrors.hs  TestHttpHeaders.hs  TestHttpPayloadDeserialization.hs  TestReservedWords.hs
client-codegen-test/output/source/test-client-sdk/Com/Example/Model/: CoffeeCustomization.hs  CoffeeType.hs  Error400.hs  MilkType.hs  TemperaturePreference.hs  TestErrorsInput.hs  TestErrorsOutput.hs  TestHttpDocumentDeserializationInput.hs  TestHttpDocumentDeserializationOutput.hs  TestHttpDocumentInput.hs  TestHttpHeadersInput.hs  TestHttpHeadersOutput.hs  TestHttpPayloadDeserializationInput.hs  TestHttpPayloadDeserializationOutput.hs  TestHttpPayloadOutput.hs  TestQueryInput.hs  TestQueryOutput.hs  TestReservedWordsInput.hs
client-codegen/src/main/kotlin/in/juspay/smithy/haskell/client/codegen/: Alias.kt  CodegenUtils.kt  Constants.kt  DirectedCodegenImpl.kt  HaskellClientCodegenPlugin.kt  HaskellContext.kt  HaskellImportContainer.kt  HaskellIntegration.kt  HaskellSettings.kt  HaskellSymbolProvider.kt  HaskellWriter.kt  ShapeExt.kt  SymbolExt.kt  UtilityGenerator.kt
client-codegen/src/main/kotlin/in/juspay/smithy/haskell/client/codegen/generators/: BuilderGenerator.kt  CabalGenerator.kt  EnumGenerator.kt  ErrorGenerator.kt  FromResponseParserGenerator.kt  IntEnumGenerator.kt  IntoRequestBuilderGenerator.kt  OperationGenerator.kt  RequestBindingGenerator.kt  ResponseBindingGenerator.kt  ServiceGenerator.kt  StructureDeserializerGenerator.kt  StructureGenerator.kt  StructureSerializerGenerator.kt  UnionGenerator.kt
client-codegen/src/main/kotlin/in/juspay/smithy/haskell/client/codegen/language/: Record.kt
client-codegen/src/main/kotlin/io/superposition/smithy/haskell/client/codegen/: Alias.kt  CodegenUtils.kt  Constants.kt  DirectedCodegenImpl.kt  HaskellClientCodegenPlugin.kt  HaskellContext.kt  HaskellImportContainer.kt  HaskellIntegration.kt  HaskellSettings.kt  HaskellSymbolProvider.kt  HaskellWriter.kt  ImportContainerImpl.kt  ShapeExt.kt  SymbolExt.kt  SymbolProperties.kt  UtilityGenerator.kt  reserved-words.txt
client-codegen/src/main/kotlin/io/superposition/smithy/haskell/client/codegen/generators/: BuilderGenerator.kt  CabalGenerator.kt  EnumGenerator.kt  ErrorGenerator.kt  HttpPayloadGenerator.kt  IntEnumGenerator.kt  OperationGenerator.kt  RequestBindingGenerator.kt  ResponseBindingGenerator.kt  ServiceGenerator.kt  StructureDeserializerGenerator.kt  StructureGenerator.kt  StructureSerializerGenerator.kt  UnionGenerator.kt
client-codegen/src/main/kotlin/io/superposition/smithy/haskell/client/codegen/language/: Record.kt
client-codegen/src/main/resources/: reserved-words.txt  utility.hs
gradle/: libs.versions.toml
hs-it/: CHANGELOG.md  hs-it.cabal
hs-it/test/: Main.hs  Message.hs
lib/: build.gradle.kts
lib/src/main/kotlin/io/superposition/smithy/haskell/codegen/: DirectedCodegenImpl.kt  HaskellCodegenPlugin.kt  HaskellContext.kt  HaskellIntegration.kt  HaskellSettings.kt  HaskellSymbolProvider.kt  HaskellWriter.kt  ImportContainerImpl.kt
