cabal-version:      3.0
name:               hs-it
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
description: Test module for the generated smithy client.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Juspay Technologies
maintainer:         shrey.bana@juspay.in
category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

test-suite hs-it-test
    import:           warnings
    default-language: Haskell2010
    default-extensions: OverloadedStrings, TypeApplications, ImportQualifiedPost, LambdaCase
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:    base ^>=4.18.2.0,
                      test-client-sdk,
                      text,
                      http-client,
                      http-client-tls,
                      network-uri,
                      containers,
                      aeson,
                      HUnit,
                      warp,
                      wai,
                      http-types,
                      stm,
                      bytestring,
                      case-insensitive,
                      extra,
                      http-date

    other-modules:    Message
                      HttpLabelTest
                      HttpQueryTest
                      HttpHeaderTest
                      HttpPayloadTest
                      HttpDocumentTest
                      HttpPayloadDeserializationTest
                      HttpDocumentDeserializationTest
                      ReservedWordsTest
