cabal-version: 3.0
name: test-client-sdk
version: 0.0.1
category: Client
build-type: Simple

library
    build-depends:      base >= 4.14 && < 4.19,
                        text >= 1.2.3 && < 2.1,
                        http-client >= 0.7.9 && < 0.8,
                        aeson >= 2.0.0 && < 2.2.0,
                        containers >= 0.6.4 && < 0.7,
                        case-insensitive >= 1.2.1 && < 1.3,
                        bytestring >= 0.10.12 && < 0.12.0,
                        http-types >= 0.12.3 && < 0.13,
                        http-date >= 0.0.8 && < 0.1,
                        network-uri >= 2.6 && < 2.7,
                        http-client >= 0.5.14 && < 0.8
    exposed-modules:    Com.Example.Command.TestHttpDocumentDeserialization,
                        Com.Example.Model.TestQueryInput,
                        Com.Example.Command.TestHttpHeaders,
                        Com.Example.Model.TestHttpPayloadDeserializationInput,
                        Com.Example.Model.TestHttpLabelsInput,
                        Com.Example.Command.TestHttpLabels,
                        Com.Example.Model.CoffeeType,
                        Com.Example.Model.TestHttpLabelsOutput,
                        Com.Example.Model.MilkType,
                        Com.Example.Model.TestHttpPayloadOutput,
                        Com.Example.Model.TestHttpHeadersOutput,
                        Com.Example.Model.TestHttpHeadersInput,
                        Com.Example.Model.TestHttpPayloadDeserializationOutput,
                        Com.Example.Model.TemperaturePreference,
                        Com.Example.Model.TestHttpDocumentOutput,
                        Com.Example.Model.TestHttpDocumentDeserializationInput,
                        Com.Example.Command.TestQuery,
                        Com.Example.Model.CoffeeItem,
                        Com.Example.Command.TestHttpDocument,
                        Com.Example.Model.TestHttpDocumentInput,
                        Com.Example.Model.TestQueryOutput,
                        Com.Example.Model.CoffeeCustomization,
                        Com.Example.Command.TestHttpPayloadDeserialization,
                        Com.Example.Command.TestHttpPayload,
                        Com.Example.Model.TestHttpDocumentDeserializationOutput,
                        Com.Example.Model.TestHttpPayloadInput,
                        Com.Example.ExampleServiceClient
    other-modules:      Com.Example.Model.InternalServerError
    default-language:   Haskell2010
    default-extensions: OverloadedStrings, TypeApplications, ScopedTypeVariables, LambdaCase, ConstrainedClassMethods
