cabal-version: 3.0
name: test-client-sdk
version: 0.0.1
category: Client
build-type: Simple

library
    build-depends:      base >= 4.14 && < 4.19,
                        text >= 1.2.3 && < 2.1,
                        aeson >= 2.0.0 && < 2.3.0,
                        network-uri >= 2.6 && < 2.7,
                        http-client >= 0.5.14 && < 0.8,
                        mtl == 2.3.1,
                        http-date >= 0.0.8 && < 0.1,
                        time >= 1.9 && < 1.15,
                        http-types >= 0.12.3 && < 0.13,
                        containers >= 0.6.4 && < 0.7,
                        bytestring >= 0.10.12 && < 0.12.0,
                        case-insensitive >= 1.2.1 && < 1.3
    exposed-modules:    Com.Example.Command.TestHttpDocumentDeserialization,
                        Com.Example.Model.TestQueryInput,
                        Com.Example.Model.InternalServerError,
                        Com.Example.Command.TestHttpHeaders,
                        Com.Example.Model.TestHttpPayloadDeserializationInput,
                        Com.Example.Model.TestHttpLabelsInput,
                        Com.Example.Command.TestHttpLabels,
                        Com.Example.Model.CoffeeType,
                        Com.Example.Command.TestCustomStatus,
                        Com.Example.Model.TestHttpLabelsOutput,
                        Com.Example.Model.MilkType,
                        Com.Example.Model.Error400,
                        Com.Example.Model.TestErrorsInput,
                        Com.Example.Model.TestHttpPayloadOutput,
                        Com.Example.Model.TestHttpHeadersOutput,
                        Com.Example.Model.TestHttpHeadersInput,
                        Com.Example.Model.TestErrorsOutput,
                        Com.Example.Model.TestReservedWordsInput,
                        Com.Example.Model.TestHttpPayloadDeserializationOutput,
                        Com.Example.Model.TemperaturePreference,
                        Com.Example.Command.TestErrors,
                        Com.Example.Model.TestHttpDocumentOutput,
                        Com.Example.Model.TestHttpDocumentDeserializationInput,
                        Com.Example.Command.TestReservedWords,
                        Com.Example.Command.TestQuery,
                        Com.Example.Model.CoffeeItem,
                        Com.Example.Model.TestCustomStatusOutput,
                        Com.Example.Command.TestHttpDocument,
                        Com.Example.Model.TestHttpDocumentInput,
                        Com.Example.Model.TestReservedWordsOutput,
                        Com.Example.Model.TestQueryOutput,
                        Com.Example.Model.CoffeeCustomization,
                        Com.Example.Model.TestCustomStatusInput,
                        Com.Example.Command.TestHttpPayloadDeserialization,
                        Com.Example.Command.TestHttpPayload,
                        Com.Example.Model.TestHttpDocumentDeserializationOutput,
                        Com.Example.Model.TestHttpPayloadInput,
                        Com.Example.ExampleServiceClient
    other-modules:      Com.Example.Utility
    default-language:   Haskell2010
    default-extensions: DeriveGeneric,
                        OverloadedStrings,
                        TypeApplications,
                        ScopedTypeVariables,
                        LambdaCase,
                        ConstrainedClassMethods,
                        TypeSynonymInstances,
                        AllowAmbiguousTypes,
                        DefaultSignatures,
                        FlexibleInstances,
                        TupleSections,
                        UndecidableInstances
